# battle_city

./: .gitmodules  CMakeLists.txt  main.cpp  settings.ini
app/: game.cpp  game.hpp  keyboard_keys.cpp  keyboard_keys.hpp
app/builder/: window.cpp  window.hpp
app/types/: ikeys.hpp
entity/: animate_rectangle_shape.cpp  animate_rectangle_shape.hpp  player.cpp  player.hpp  player_builder.cpp  player_builder.hpp  projectile.cpp  projectile.hpp
entity/builder/: player.cpp  player.hpp  projectile.cpp  projectile.hpp
entity/decorator/: animate_rectangle_shape.cpp  animate_rectangle_shape.hpp
entity/types/: ientity.hpp  itank_entity.hpp
layer/: background.cpp  background.hpp  border.cpp  border.hpp  landscape.cpp  landscape.hpp
layer/levels/: 1.txt  reader.cpp  reader.hpp
layer/types/: idecorator.hpp  ilayer.hpp
layers/: background.cpp  background.hpp  controller_full.hpp  layers_builder.cpp  layers_builder.hpp
layers/controller/: background.cpp  background.hpp  border.cpp  border.hpp  player.hpp
layers/decorators/: background.cpp  background.hpp  border_decorator.cpp  border_decorator.hpp  player.cpp
layers/types/: idecorator.cpp  idecorator.hpp  ilayer.cpp  ilayer.hpp
main/: game.cpp  game.hpp  main.cpp  window.cpp  window.hpp
main/types/: igame.hpp  iwindow.hpp
picture/: picture_builder.cpp  picture_builder.hpp
picture/types/: ipicture_builder.hpp
resource/: ini_reader.cpp  ini_reader.hpp  landscape_parser.cpp  landscape_parser.hpp  manager.cpp  manager.hpp  parser.cpp  parser.hpp  rect_sprite.cpp  rect_sprite.hpp  texture_getter.cpp  texture_getter.hpp
resource/builder/: ally_tank.cpp  ally_tank.hpp  border.cpp  border.hpp  landscape.cpp  landscape.hpp  sprite.cpp  sprite.hpp
resource/builder/types/: ibuilder.hpp
resource/ini/: ini_reader.cpp  ini_reader.hpp  parser.cpp  parser.hpp
resource/landscape/: brick.cpp  brick.hpp  manager.cpp  manager.hpp
resource/landscape/builder/: manager.cpp  manager.hpp
resource/parser/: ini.cpp  ini.hpp  landscape.cpp  landscape.hpp
resource/png/: manager.cpp  manager.hpp
resource/reader/: ini.cpp  ini.hpp  landscape.cpp  landscape.hpp
resource/types/: ibuilder.hpp  ilandscape.hpp  iparser.hpp
state/: game.cpp  game.hpp  menu.cpp  menu.hpp
state/types/: istate.hpp
tank/types/: itank.cpp  itank.hpp
utils/: consistent_registrator.hpp  continue_registrator.hpp  direction_helper.cpp  direction_helper.hpp  timer_policy.cpp  timer_policy.hpp
utils/types/: idecorator.hpp  ipolicy.hpp  registrator.hpp
